# ant-protocol

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: chunk.rs  chunk_protocol.rs  devnet_manifest.rs  error.rs  lib.rs  logging.rs
src/payment/: commitment.rs  mod.rs  pricing.rs  proof.rs  single_node.rs  verify.rs
